--- a/style.css
+++ b/style.css
@@ -27,11 +27,7 @@ main {
 }
 
 .calc-container {
-    box-shadow: 0px 10px 2px 0px var(--grey);
-    border-top: 1px solid var(--grey);
-    border-left: 2px solid var(--grey);
-    border-right: 2px solid var(--grey);
-    border-bottom: 2px solid var(--grey);
+    border: 4px solid var(--grey);
     z-index: 0;
     border-radius: 20px;
     padding: 20px;
@@ -81,6 +77,8 @@ button {
 }
 .resultadoAnterior {
     margin-right: 16px;
+    font-size: 30px;
+    filter: brightness(0.9);
 }
 
 .clear {
@@ -215,9 +213,6 @@ button {
         background-color: var(--orange);
     }
 }
-
-
-
 
 
 @media screen and (max-width: 428px) {
